# rsdk-mdl-wgpu

./: Cargo.toml  README.md
src/: lib.rs  main.rs  mdl.rs
src/lib/: mdl.rs  wgpu_render.rs
src/wgpu_render/: mod.rs  shader.wgsl
