[package]
name = "rsdk_mdl_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.0"
winit = "0.27.4"
log = "0.4.0"
env_logger = "0.9.0"
pollster = "0.2.5"
bytemuck = { version = "1.12.1", features = [ "derive" ] }

binrw = "0.10.0"
clap = { version = "4.0.13", features = ["derive"] }
modular-bitfield = "0.11.2"
